After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 754451 - Opensubtitles plugin causes many warnings
Opensubtitles plugin causes many warnings
Status: RESOLVED FIXED
Product: grilo
Classification: Other
Component: plugins
git master
Other Linux
: Normal normal
: ---
Assigned To: grilo-maint
grilo-maint
: 754447 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2015-09-02 12:29 UTC by Vadim Rutkovsky
Modified: 2015-09-02 13:03 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
opensubtitles: Fix warnings running gnome-music (1.58 KB, patch)
2015-09-02 12:42 UTC, Bastien Nocera
none Details | Review
opensubtitles: Fix warnings running gnome-music (1.38 KB, patch)
2015-09-02 13:02 UTC, Bastien Nocera
committed Details | Review

Description Vadim Rutkovsky 2015-09-02 12:29:54 UTC
GNOME Music produces many warnings during startup:

(gnome-music:23156): Grilo-CRITICAL **: grl_data_has_key: assertion 'GRL_IS_DATA (data)' failed

(gnome-music:23156): Grilo-CRITICAL **: grl_data_has_key: assertion 'GRL_IS_DATA (data)' failed

(gnome-music:23156): Grilo-CRITICAL **: grl_data_has_key: assertion 'GRL_IS_DATA (data)' failed

It seems to be caused by opensubtitles plugin:

Breakpoint 1, g_log (log_domain=0x7fffe4bff7b3 "Grilo", log_level=G_LOG_LEVEL_CRITICAL, format=0x7fffef29e43d "%s: assertion '%s' failed") at gmessages.c:1107
1107	{
(gdb) t
[Current thread is 1 (Thread 0x7ffff7fd3700 (LWP 27819))]
(gdb) bt
  • #0 g_log
    at gmessages.c line 1107
  • #1 grl_data_has_key
    at data/grl-data.c line 658
  • #2 grl_opensubtitles_source_may_resolve
    at grl-opensubtitles.c line 561
  • #3 grl_source_may_resolve
    at grl-source.c line 3441
  • #4 get_additional_source_for_key
    at grl-source.c line 1318
  • #5 get_additional_sources
    at grl-source.c line 1410
  • #6 expand_operation_keys
    at grl-source.c line 1465

Comment 1 Vadim Rutkovsky 2015-09-02 12:30:40 UTC
*** Bug 754447 has been marked as a duplicate of this bug. ***
Comment 2 Bastien Nocera 2015-09-02 12:32:11 UTC
The backtrace is too short. Why is expand_operation_keys() being called with a NULL GrlMedia?
Comment 3 Vadim Rutkovsky 2015-09-02 12:37:01 UTC
STR: jhbuild run gdb -ex 'b grl_opensubtitles_source_may_resolve' -ex 'r' --args python3 ./gnome-music

result:
Breakpoint 1, grl_opensubtitles_source_may_resolve (source=0x90e5c0, media=0x0, key_id=26, missing_keys=0x7fffffffc0a8) at grl-opensubtitles.c:548
548	{
(gdb) bt
  • #0 grl_opensubtitles_source_may_resolve
    at grl-opensubtitles.c line 548
  • #1 grl_source_may_resolve
    at grl-source.c line 3447
  • #2 get_additional_source_for_key
    at grl-source.c line 1324
  • #3 get_additional_sources
    at grl-source.c line 1416
  • #4 expand_operation_keys
    at grl-source.c line 1471
  • #5 grl_source_query
  • #6 ffi_call_unix64
    from /lib64/libffi.so.6
  • #7 ffi_call
    from /lib64/libffi.so.6
  • #8 pygi_invoke_c_callable
    at pygi-invoke.c line 645
  • #9 pygi_function_cache_invoke
    at pygi-cache.c line 820
  • #10 pygi_callable_info_invoke
    at pygi-invoke.c line 688
  • #11 _wrap_g_callable_info_invoke
    at pygi-invoke.c line 725
  • #12 _callable_info_call
    at pygi-info.c line 557
  • #13 PyObject_Call
    from /lib64/libpython3.4m.so.1.0
  • #14 PyEval_EvalFrameEx
    from /lib64/libpython3.4m.so.1.0
  • #15 PyEval_EvalCodeEx
    from /lib64/libpython3.4m.so.1.0
  • #16 PyEval_EvalFrameEx
    from /lib64/libpython3.4m.so.1.0
  • #17 PyEval_EvalCodeEx
    from /lib64/libpython3.4m.so.1.0
  • #18 function_call
    from /lib64/libpython3.4m.so.1.0
  • #19 PyObject_Call
    from /lib64/libpython3.4m.so.1.0
  • #20 method_call
    from /lib64/libpython3.4m.so.1.0
  • #21 PyObject_Call
    from /lib64/libpython3.4m.so.1.0
  • #22 PyEval_CallObjectWithKeywords
    from /lib64/libpython3.4m.so.1.0
  • #23 _pygi_closure_handle
    at pygi-closure.c line 583
  • #24 ffi_closure_unix64_inner
    from /lib64/libffi.so.6
  • #25 ffi_closure_unix64
    from /lib64/libffi.so.6
  • #26 g_main_dispatch
    at gmain.c line 3122
  • #27 g_main_context_dispatch
    at gmain.c line 3737
  • #28 g_main_context_iterate
    at gmain.c line 3808
  • #29 g_main_context_iteration
    at gmain.c line 3869
  • #30 g_application_run
    at gapplication.c line 2311
  • #31 ffi_call_unix64
    from /lib64/libffi.so.6
  • #32 ffi_call
    from /lib64/libffi.so.6
  • #33 pygi_invoke_c_callable
    at pygi-invoke.c line 645
  • #34 pygi_function_cache_invoke
    at pygi-cache.c line 820
  • #35 pygi_callable_info_invoke
    at pygi-invoke.c line 688
  • #36 _wrap_g_callable_info_invoke
    at pygi-invoke.c line 725
  • #37 _callable_info_call
    at pygi-info.c line 557
  • #38 PyObject_Call
    from /lib64/libpython3.4m.so.1.0
  • #39 PyEval_EvalFrameEx
    from /lib64/libpython3.4m.so.1.0
  • #40 PyEval_EvalCodeEx
    from /lib64/libpython3.4m.so.1.0
  • #41 PyEval_EvalCode
    from /lib64/libpython3.4m.so.1.0
  • #42 run_mod
    from /lib64/libpython3.4m.so.1.0
  • #43 PyRun_FileExFlags
    from /lib64/libpython3.4m.so.1.0
  • #44 PyRun_SimpleFileExFlags
    from /lib64/libpython3.4m.so.1.0
  • #45 Py_Main
    from /lib64/libpython3.4m.so.1.0
  • #46 main

Comment 4 Bastien Nocera 2015-09-02 12:42:30 UTC
Created attachment 310490 [details] [review]
opensubtitles: Fix warnings running gnome-music

When running gnome-music, grl_source_query() will call
expand_operation_keys() to try and find which sources could help add
metadata.
Comment 5 Victor Toso 2015-09-02 12:59:12 UTC
Review of attachment 310490 [details] [review]:

::: src/opensubtitles/grl-opensubtitles.c
@@ +568,3 @@
   }
 
+  if (!media || !GRL_IS_MEDIA_VIDEO (media))

This is not necessary as it is covered by the if (!media || ...) above
Looks fine other than that
Comment 6 Bastien Nocera 2015-09-02 13:02:43 UTC
Created attachment 310492 [details] [review]
opensubtitles: Fix warnings running gnome-music

When running gnome-music, grl_source_query() will call
expand_operation_keys() to try and find which sources could help add
metadata.
Comment 7 Bastien Nocera 2015-09-02 13:03:12 UTC
Attachment 310492 [details] pushed as 5a43255 - opensubtitles: Fix warnings running gnome-music