opensubtitles: Fix warnings running gnome-music

When running gnome-music, grl_source_query() will call
expand_operation_keys() to try and find which sources could help add
metadata.

https://bugzilla.gnome.org/show_bug.cgi?id=754451